kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-socks-shop
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - shop.34.76.209.211.nip.io
    secretName: socks-shop-tls-cert
  rules:
  - host: shop.34.76.209.211.nip.io
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
